# verizon

./: CMakeLists.txt  Disparity map OpenCV assignment.docx  README.md  README.txt  camera_calibration.cpp  disparity_map.cpp  display_image.cpp  generate_point_cloud.cpp  render_point_cloud.cpp  resume.doc  stereo_rectify_images.cpp  test_opengl.cpp
calibration/: VID5.xml  in_VID5.xml  out_camera_data.xml
